# human_skeleton_action_recognition_ros2

./: CITATION.cff  README.md  requirements.txt
hsar/: README.md  package.xml  setup.cfg  setup.py
hsar/hsar/: detect_arm_state_node.py  detect_posture_node.py  hsar_models.py  mediapipe_pose_node.py
hsar/models/pointing_detection/version_1/: README.md  norm_log.txt  pointing_mlp_detection.pt  train_log.txt
hsar/models/pointing_direction/version_1/: README.md  norm_log.txt  pointing_dataset.pkl
hsar/models/posture/version_1/: posture_dataset.pkl
hsar/models/posture/version_2/: posture_dataset_norm.pkl  posture_mlp_norm.pt  train_log.txt
hsar/models/posture/version_3/: merge_log.txt  posture_dataset_merged.pkl  posture_dataset_merged_norm.pkl  train_log.txt
hsar_assets/: CMakeLists.txt  package.xml
hsar_assets/models/arm_raised_direction/version_1/: README.md  arm_raised_direction_dataset.pkl  arm_raised_direction_dataset_norm.pkl  arm_raised_direction_mlp.pt  arm_raised_direction_scaler.pkl  dataset_video_extraction_log.txt  norm_log.txt  train_log.txt
hsar_assets/models/arm_state/version_1/: README.md  arm_state_dataset.pkl  arm_state_dataset_norm.pkl  arm_state_mlp.pt  arm_state_scaler.pkl  dataset_video_extraction_log.txt  norm_log.txt  train_log.txt
hsar_assets/models/pointing_detection/version_1/: pointing_detection_dataset.pkl  pointing_detection_dataset_norm.pkl  pointing_detection_scaler.pkl
hsar_assets/models/pointing_direction/version_1/: pointing_dataset_norm.pkl  pointing_mlp_direction.pt  pointing_scaler.pkl  train_log.txt
hsar_assets/models/pointing_direction/version_2/: README.md  dataset_video_extraction_log.txt  norm_log.txt  pointing_dataset.pkl  pointing_dataset_norm.pkl  pointing_mlp_direction.pt  pointing_scaler.pkl  train_log.txt
hsar_assets/models/posture/version_1/: README.md  posture_mlp.pt  posture_scaler.pkl
hsar_assets/models/posture/version_2/: README.md  posture_scaler_norm.pkl
hsar_assets/models/posture/version_3/: README.md  norm_log.txt  posture_mlp_merged_norm.pt  posture_scaler_mereged_norm.pkl
hsar_bringup/: CMakeLists.txt  README.md  package.xml
hsar_msgs/: CMakeLists.txt  package.xml
hsar_msgs/msg/: HumanPose3D.msg  HumanPosture.msg
(+6 files in other folders)
